# nopu-ios

./: .gitignore  README.md
icon-tools/: README.md  convert_icon.py  generate.sh  generate_icons.py
nopu/: AppConfig.swift  AppDelegate.swift  ContentView.swift  CreateSubscriptionView.swift  Info.plist  NotificationView.swift  SettingsView.swift  nopuApp.swift
nopu-rust-ffi/: .gitignore  Cargo.toml  NostrFFI.swift  README.md  build-ios.sh  build.rs
nopu-rust-ffi/include/: nostr_ffi.h
nopu-rust-ffi/src/: lib.rs  nopu_ffi.udl
nopu.xcodeproj/: project.pbxproj
nopu.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
nopu/Assets.xcassets/AppIcon.appiconset/: Contents.json
nopu/Models/: NotificationItem.swift  Subscription.swift  UserProfile.swift
nopu/NopuFFI.xcframework/: Info.plist
nopu/SubscriptionDataModel.xcdatamodeld/: Contents
nopu/SubscriptionDataModel.xcdatamodeld/SubscriptionDataModel.xcdatamodel/: contents
nopu/Utils/: CustomEmojiManager.swift  DatabaseManager.swift  EventProcessor.swift  MultiRelayPoolManager.swift  NIP19Parser.swift  NostrFFI.swift  NostrManager.swift  NostrUtils.swift  NotificationMessageBuilder.swift  PushTokenManager.swift  UserProfileManager.swift
nopu/ViewModels/: SubscriptionManager.swift  SubscriptionViewModel.swift
nopu/Views/: ConnectionStatusView.swift  ContentView.swift  CreateSubscriptionView.swift  EditSubscriptionView.swift  NotificationDetailView.swift  NotificationEventDetailView.swift  NotificationView.swift  SettingsView.swift  SharedUIComponents.swift  UserProfileDetailView.swift
(+4 files in other folders)
