[package]
name = "nopu-rust-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
nostr = "0.42"
nostr-sdk = "0.42"
uniffi = { version = "0.29.3", features = [ "cli" ] }
uniffi_bindgen = "0.29.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.0"
camino = "1.0"
lazy_static = "1.5"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
uniffi_build = "0.29"

[target.'cfg(target_os = "ios")'.dependencies]
uniffi = { version = "0.29", features = ["build"] }
